log.txt
/home/ubuntu/Work/Projet/Project-Procedurally-Generated-Platformer/code/blocks/BlockTypes.cpp: In static member function ‘static void platformer::BlockTypes::parseXML()’:
/home/ubuntu/Work/Projet/Project-Procedurally-Generated-Platformer/code/blocks/BlockTypes.cpp:61:9: error: ‘assert’ was not declared in this scope
   61 |         assert(file);
      |         ^~~~~~
/home/ubuntu/Work/Projet/Project-Procedurally-Generated-Platformer/code/blocks/BlockTypes.cpp:8:1: note: ‘assert’ is defined in header ‘<cassert>’; did you forget to ‘#include <cassert>’?
    7 | #include <iostream>
  +++ |+#include <cassert>
    8 | 
make[2]: *** [CMakeFiles/Platformer.dir/build.make:132: CMakeFiles/Platformer.dir/code/blocks/BlockTypes.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/Platformer.dir/all] Error 2
make: *** [Makefile:111: all] Error 2
